Bug 1733492, unknown content type dialog not always appearing when always ask is set in preferences for a type, r=mtigley

This defaults the always ask setting for a type to false when the download panel improvements preference is enabled, and adjusts the external helper apps service so that it properly uses the always ask flag in all cases

Differential Revision: https://phabricator.services.mozilla.com/D127850