uriloader/exthandler/nsMIMEInfoImpl.cpp
@@ -67,13 +67,15 @@ nsMIMEInfoBase::nsMIMEInfoBase(const char* aMIMEType)
     : mSchemeOrType(aMIMEType),
       mClass(eMIMEInfo),
       mPreferredAction(nsIMIMEInfo::saveToDisk),
-      mAlwaysAskBeforeHandling(true) {}
+      mAlwaysAskBeforeHandling(
+          !StaticPrefs::browser_download_improvements_to_download_panel()) {}
 
 nsMIMEInfoBase::nsMIMEInfoBase(const nsACString& aMIMEType)
     : mSchemeOrType(aMIMEType),
       mClass(eMIMEInfo),
       mPreferredAction(nsIMIMEInfo::saveToDisk),
-      mAlwaysAskBeforeHandling(true) {}
+      mAlwaysAskBeforeHandling(
+          !StaticPrefs::browser_download_improvements_to_download_panel()) {}
 
 // Constructor for a handler that lets the caller specify whether this is a
 // MIME handler or a protocol handler.  In the long run, these will be distinct
@@ -84,7 +86,8 @@ nsMIMEInfoBase::nsMIMEInfoBase(const nsACString& aType, HandlerClass aClass)
     : mSchemeOrType(aType),
       mClass(aClass),
       mPreferredAction(nsIMIMEInfo::saveToDisk),
-      mAlwaysAskBeforeHandling(true) {}
+      mAlwaysAskBeforeHandling(
+          !StaticPrefs::browser_download_improvements_to_download_panel()) {}
 
 nsMIMEInfoBase::~nsMIMEInfoBase() {}
 
